# defer

./: README.md
src/: defer.h
tests/: CMakeLists.txt  tests.cpp
